<resources>
    <string name="app_name">全明星</string>

    <string name="hello_world">Hello world!</string>
    <string name="hello_show">Hello Show!</string>
    <string name="action_settings">Settings</string>

  <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st. agur blue
    cheese caerphilly bavarian bergkase cheese and biscuits mascarpone. Cheeseburger swiss bavarian
    bergkase cream cheese fromage frais cheesy feet port-salut airedale. St. agur blue cheese rubber
    cheese caerphilly cheddar cheesecake cream cheese manchego lancashire. Roquefort squirty cheese
    the big cheese.</string>
    <string name="checkin">Checkin</string>
    <string name="menu_settings">Settings</string>


    <string name="title_activity_show">ShowActivity</string>
    <string name="str_tab_home">首页</string>
    <string name="str_tab_guangchang">广场</string>
    <string name="str_tab_msg">信息</string>
    <string name="str_tab_my">我的</string>

    <string name="clickAgain2Leave">再按一次返回就退出</string>

    <string name="sticker_loading">内容获取中...</string>
    <string name="sticker_loading_present">一大波礼物正在向您靠近...</string>
    <string name="sticker_loading_text">失败乃成功之母，刷新再试试</string>
    <string name="sticker_network_error">加载失败， 点击这里重新试试</string>
    <string name="sticker_content_empty">内容暂时为空，敬请等待~</string>
    <string name="sticker_no_net">哎呀，手机好像是没连上网~</string>
    <string name="sticker_net_timeout">网络不太给力哦，一会再试试~</string>
    <string name="sticker_data_exception">数据加载异常，请稍后重试</string>


    <string name="str_wlj">无滤镜</string>
    <string name="str_edit_photo">内容编辑</string>
    <string name="str_back">返回</string>
    <string name="str_next">下一步</string>
    <string name="str_sticker">贴纸</string>
    <string name="str_content">内容</string>
    <string name="str_lvjing">滤镜</string>
    <string name="str_tag">标签</string>
    <string name="passport_register_account_hint">手机号</string>
    <string name="str_done">完成</string>
    <string name="str_input_code">输入验证码</string>
    <string name="str_get_code">获取验证码</string>
    <string name="str_zan">赞</string>
    <string name="str_focus">关注</string>
    <string name="str_fans">粉丝</string>
    <string name="str_topic_content_hint">点我编辑帖子内容</string>
    <string name="str_app_title">Allstar</string>
    <string name="str_dongtai">动态</string>
    <string name="str_my_title">我的</string>


  <string name="weibo_oauth_regiseter">应用授权</string>
  <string name="website">http://www.mob.com</string>
  <string name="weibo_upload_content">分享图片</string>
  <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
  <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
  <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
  <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
  <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
  <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
  <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
  <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
  <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
  <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
  <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
  <string name="laiwang_client_inavailable">目前您的来往版本过低或未安装，需要安装来往才能使用</string>

  <string name="sinaweibo">新浪微博</string>
  <string name="tencentweibo">腾讯微博</string>
  <string name="qzone">QQ空间</string>
  <string name="wechat">微信好友</string>
  <string name="wechatmoments">微信朋友圈</string>
  <string name="wechatfavorite">微信收藏</string>
  <string name="facebook">Facebook</string>
  <string name="twitter">Twitter</string>
  <string name="renren">人人网</string>
  <string name="kaixin">开心网</string>
  <string name="email">邮件</string>
  <string name="shortmessage">信息</string>
  <string name="sohumicroblog">搜狐微博</string>
  <string name="sohusuishenkan">搜狐随身看</string>
  <string name="neteasemicroblog">网易微博</string>
  <string name="douban">豆瓣</string>
  <string name="youdao">有道云笔记</string>
  <string name="evernote">印象笔记</string>
  <string name="linkedin">领英</string>
  <string name="googleplus">Google+</string>
  <string name="foursquare">FourSquare</string>
  <string name="qq">QQ</string>
  <string name="pinterest">Pinterest</string>
  <string name="flickr">Flickr</string>
  <string name="tumblr">Tumblr</string>
  <string name="dropbox">Dropbox</string>
  <string name="vkontakte">VK</string>
  <string name="instagram">Instagram</string>
  <string name="yixin">易信</string>
  <string name="yixinmoments">易信朋友圈</string>
  <string name="mingdao">明道</string>
  <string name="kakaotalk">KakaoTalk</string>
  <string name="kakaostory">KakaoStory</string>
  <string name="line">Line</string>
  <string name="bluetooth">蓝牙</string>
  <string name="whatsapp">WhatsApp</string>
  <string name="pocket">Pocket</string>
  <string name="instapaper">Instapaper</string>
  <string name="instapaper_email">邮箱</string>
  <string name="instapaper_pwd">密码</string>
  <string name="instapaper_login">登录</string>
  <string name="instapaper_logining">登录中…</string>
  <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
  <string name="facebookmessenger">Facebook Messenger</string>
  <string name="baidutieba">百度贴吧</string>
  <string name="laiwang">来往</string>
  <string name="laiwangmoments">来往动态</string>

  <string name="share_to_baidutieba">分享到百度贴吧</string>
  <string name="share_to_qzone">分享到QQ空间</string>
  <string name="share_to_qq">分享到QQ</string>
  <string name="mingdao_share_content">网页分享</string>
  <string name="share_to_mingdao">分享到明道</string>
  <string name="share_to_qzone_default">来自%s的分享</string>
  <string name="use_login_button">请改用“登录”按钮</string>


</resources>
