<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <com.potato.sticker.camera.customview.CommonTitleBar
        android:id="@+id/title_layout"
        style="@style/head_default"
        app:leftBtnIcon="@drawable/icon_back_arrow_selector"
        app:rightBtnIcon="@drawable/next"
        app:titleTxt="@string/str_edit_photo"
        app:leftBtnTxt="@string/str_back"
        app:rightBtnTxt="@string/str_next" />

    <LinearLayout
        android:id="@+id/main_area"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/drawing_view_container"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <jp.co.cyberagent.android.gpuimage.GPUImageView
                android:id="@+id/gpuimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/toolbar_area"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_margin="2dp"
                android:background="@drawable/corners_bg_white_2r_borderd"
                android:gravity="top"
                android:hint="@string/str_topic_content_hint"
                android:padding="4dp"
                android:textSize="20sp"/>

            <it.sephiroth.android.library.widget.HListView
                android:id="@+id/list_tools"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:background="@color/common_background"
                android:gravity="center_vertical"
                android:overScrollMode="always"
                app:hlv_dividerWidth="@dimen/margin_15px"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_area"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/sticker_blue"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bt_content"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_content"
            android:textColor="#d0beb9"
            android:textSize="22sp" />
        <TextView
            android:id="@+id/sticker_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_sticker"
            android:textColor="#d0beb9"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/filter_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_lvjing"
            android:textColor="#d0beb9"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/text_btn"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/str_tag"
            android:textColor="#d0beb9"
            android:textSize="22sp" />
    </LinearLayout>

</LinearLayout>