<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="test"
            type="String" />
    </data>


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
                >

                <ImageView
                    android:id="@+id/backdrop"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    app:layout_collapseMode="parallax"
                    />

                <LinearLayout
                    android:id="@+id/rl_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp"
                    app:layout_collapseMode="parallax">

                    <com.makeramen.roundedimageview.RoundedImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/def_gray_small"
                        app:riv_corner_radius="30dip" />

                    <TextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:text="time"
                        android:textColor="@color/potato_white"
                        android:textSize="@dimen/txt_normal_l" />

                    <Button
                        android:id="@+id/bt_focus"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:background="@drawable/selector_bg_red"
                        android:text="@string/str_focus"
                        android:textColor="@color/potato_white"
                        android:visibility="gone" />

                </LinearLayout>

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/potato_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <LinearLayout
                    android:id="@+id/ll_tag"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_tag_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/potato_black"
                        android:textSize="@dimen/txt_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_tag"
                        android:textColor="@color/potato_gray3"
                        android:textSize="@dimen/txt_small" />

                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="30dp"
                    android:background="@color/divider"></View>

                <LinearLayout
                    android:id="@+id/ll_zan"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_zan_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/potato_black"
                        android:textSize="@dimen/txt_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_zan"
                        android:textColor="@color/potato_gray3"
                        android:textSize="@dimen/txt_small" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="30dp"
                    android:background="@color/divider"></View>

                <LinearLayout
                    android:id="@+id/ll_focus"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_focus_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/potato_black"
                        android:textSize="@dimen/txt_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_focus"
                        android:textColor="@color/potato_gray3"
                        android:textSize="@dimen/txt_small" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="30dp"
                    android:background="@color/divider"></View>

                <LinearLayout
                    android:id="@+id/ll_fans"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_fans_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/potato_black"
                        android:textSize="@dimen/txt_normal"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_fans"
                        android:textColor="@color/potato_gray3"
                        android:textSize="@dimen/txt_small" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/divider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.potato.library.view.NormalEmptyView
                    android:id="@+id/empty_view"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                </com.potato.library.view.NormalEmptyView>

                <com.potato.library.view.refresh.HFRecyclerSwipeLayout
                    android:id="@+id/swipe_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:cacheColorHint="@android:color/transparent"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0px"
                        android:listSelector="@android:color/transparent"
                        android:scrollbars="none" />

                </com.potato.library.view.refresh.HFRecyclerSwipeLayout>


            </LinearLayout>
        </LinearLayout>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:onClick="onClick"
            android:src="@drawable/ic_fav"
            app:layout_anchor="@id/collapsing_toolbar"
            app:layout_anchorGravity="bottom|right"
            app:elevation="6dp"
            app:fabSize="mini"
            app:pressedTranslationZ="12dp"
            app:rippleColor="#a6a6a6"/>

    </android.support.design.widget.CoordinatorLayout>
</layout>